# cpp-course

./: .gitignore  README.md
advanced/2_Exceptions/CatchingSubclassExceptions/src/: CatchingSubclassExceptions.cpp
advanced/3_Files/ParsingTextinFiles/src/: Parsing Text in Files.cpp
advanced/course_src/03_Files/ReadingTextFiles/src/: Reading Text Files.cpp
advanced/course_src/03_Files/StructPadding/src/: Binary Files.cpp
advanced/course_src/04_STL/StlComplexDataTypes/src/: main.cpp
advanced/course_src/08_cpp11/AutoPointers/: CMakeLists.txt
advanced/course_src/08_cpp11/EnhancedForLoop/src/: EnhancedForLoop.cpp
advanced/mine/exercises/: CMakeLists.txt
advanced/mine/exercises/src/: main.cpp
advanced/mine/my_project/src/: Bitmap.cpp  Bitmap.h  BitmapFileHeader.h  BitmapInfoHeader.h  Mandelbrot.cpp  Mandelbrot.h  main.cpp
advanced/mine/src/: main.cpp
beginner/course_src/: Advanced conditions.cpp
beginner/mine/Classes/: CMakeLists.txt
beginner/mine/Classes/src/: Animals.h  Cat.cpp  Cat.h  Classes.cpp
shaders/: example.cpp  glad.c
shaders/dependencies/include/glad/: glad.h
shaders/dependencies/lib/: libglfw.3.dylib
